# an-dr-copper

./: .gitignore  AGENTS.md  Cargo.toml  README.md  review-architect-date.md
daemon/: Cargo.toml
daemon/src/: cli.rs  config_ui.rs  control_plane.rs  daemon.rs  descriptor.rs  execution.rs  extension.rs  host_extensions.rs  lib.rs  main.rs  schema.rs  state_store.rs  tray.rs  tray_extension.rs
daemon/src/api/: fs.rs  mod.rs  notify.rs  shell.rs  store.rs  ui.rs  windows_display.rs
daemon/src/runtime/: mod.rs
daemon/tests/: architecture_guards.rs  cli_integration.rs  daemon_process_integration.rs  extension_utr.rs
docs/: AI_AUTHORING.md  ARCHITECTURE.md  EXTENSION_UI_ACCESS.md  QUICKSTART.md
extensions/desktop-torrent-organizer/: descriptor.json  main.ts  manifest.json
extensions/session-counter/: descriptor.json  main.ts
extensions/sort-downloads/: descriptor.json  main.ts
extensions/windows-display-manager/: main.ts  manifest.json
schemas/extension/1.0.0/: descriptor.schema.json
scripts/: bootstrap.ps1  bootstrap.sh  build-debug.ps1  build-debug.sh  build-release.ps1  build-release.sh  coverage.ps1  daemon.ps1  daemon.sh  install.ps1  run-tests.ps1  verify-loop.ps1  verify-loop.sh
sdk/: api.d.ts  package.json
