[package]
name = "copperd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "copperd"
path = "src/lib.rs"

[[bin]]
name = "copperd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
jsonschema = "0.18.3"
semver = "1.0.25"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.20.0"
