[package]
name = "copperd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "copperd"
path = "src/lib.rs"

[[bin]]
name = "copperd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ctrlc = "3.4.7"
dirs = "6.0.0"
jsonschema = "0.18.3"
rand = "0.8.5"
semver = "1.0.25"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.20.0"

[target.'cfg(windows)'.dependencies]
tray-item = "0.10.0"
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "macos")'.dependencies]
tray-item = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10.0", default-features = false, features = ["ksni"] }
